# t-top

./: .clang-format  .gitmodules  README.md
ros/behaviors/behavior_msgs/: CMakeLists.txt  package.xml
ros/behaviors/behavior_msgs/msg/: Done.msg  GestureName.msg  SoundFile.msg
ros/behaviors/behavior_srvs/: CMakeLists.txt  package.xml
ros/behaviors/behavior_srvs/srv/: GenerateSpeechFromText.srv
ros/behaviors/face_following/: CMakeLists.txt  README.md  package.xml  setup.py
ros/behaviors/face_following/face_following/: lib_face_following_node.py
ros/behaviors/face_following/scripts/: face_following_node.py  nearest_face_following_node.py  specific_face_following_node.py
ros/behaviors/piper_ros/: CMakeLists.txt  README.md  package.xml
ros/behaviors/piper_ros/models/: en_US-ryan-low.onnx.json  fr_FR-gilles-low.onnx.json  fr_FR-siwis-low.onnx.json
ros/behaviors/piper_ros/src/: piper_node.cpp
ros/behaviors/sound_object_person_following/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
ros/behaviors/sound_object_person_following/launch/: calibrate_sound_object_person_following.launch  calibrate_sound_object_person_following.launch.xml
ros/behaviors/sound_object_person_following/scripts/: calibrate_sound_object_person_following_node.py  sound_object_person_following_node.py
ros/behaviors/sound_object_person_following/sound_object_person_following/: __init__.py
ros/behaviors/teleoperation/: CMakeLists.txt  README.md  package.xml
ros/behaviors/teleoperation/scripts/: teleoperation_node.py
ros/behaviors/too_close_reaction/: CMakeLists.txt  README.md  package.xml
ros/behaviors/too_close_reaction/scripts/: too_close_reaction_node.py
ros/daemon_ros_client/: CMakeLists.txt  package.xml
ros/daemon_ros_client/launch/: client.launch
ros/daemon_ros_client/msg/: BaseStatus.msg  LedColors.msg  MotorStatus.msg
ros/daemon_ros_client/src/: DaemonRosClientNode.cpp  DaemonRosClientNode.h  QtUtils.h  daemon_ros_client_node.cpp
ros/demos/connect4/: CMakeLists.txt  package.xml
ros/demos/connect4/launch/: connect4.launch  connect4.launch.xml  test_face_orientation.launch  test_face_orientation.launch.xml
ros/demos/connect4/scripts/: nearest_face_following_orientation_replication_node.py  nearest_face_orientation_node.py
ros/demos/connect4/src/: Connect4Widget.cpp  Connect4Widget.h  ImageDisplay.cpp  ImageDisplay.h  QtUtils.h  connect4_node.cpp
ros/demos/control_panel/: CMakeLists.txt  README.md  package.xml
ros/demos/control_panel/launch/: control_panel.launch  control_panel.launch.xml
ros/demos/control_panel/src/: AvatarTab.cpp  AvatarTab.h  BehaviorsTab.cpp  BehaviorsTab.h  ControlPanel.cpp  ControlPanel.h  ControlPanelDesires.cpp  ControlPanelDesires.h  ControlPanelStrategies.cpp  ControlPanelStrategies.h  DesireUtils.h  GestureTab.cpp  GestureTab.h  PerceptionsTab.cpp  PerceptionsTab.h  QtUtils.h  SpeechTab.cpp  SpeechTab.h  control_panel_node.cpp  (+1 more)
ros/demos/home_logger/: .gitignore  CMakeLists.txt  package.xml
ros/demos/smart_speaker/: CMakeLists.txt  README.md  package.xml  setup.py  story_en.txt
ros/demos/t_top_opentera/: CMakeLists.txt  README.md  package.xml
ros/perceptions/audio_analyzer/: CMakeLists.txt  README.md  package.xml
ros/perceptions/ego_noise_reduction/: .gitignore  CMakeLists.txt  README.md  package.xml
ros/perceptions/perception_msgs/: CMakeLists.txt  package.xml
ros/perceptions/person_identification/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
ros/perceptions/pose_classifier/: CMakeLists.txt  README.md  package.xml
ros/perceptions/speech_to_text/: CMakeLists.txt  README.md  package.xml
ros/perceptions/video_analyzer/: CMakeLists.txt  README.md  package.xml  setup.py
ros/t_top/: CMakeLists.txt  README.md  package.xml  setup.py
ros/t_top/calibration/: .gitignore  camera_2d_wide.yaml
ros/t_top/config/: configuration_16SoundsUSB.cfg  configuration_16SoundsUSB_pa.cfg  configuration_16SoundsUSB_pa_echo_cancelled.cfg  configuration_16SoundsUSB_pulseaudio.cfg  configuration_16SoundsUSB_pulseaudio_ec.cfg
ros/t_top/launch/: actuators.launch  behaviors.launch  behaviors.launch.xml  bringup.launch  bringup.launch.xml  opencr.launch  opentera_teleop.launch  opentera_teleop.launch.xml  perceptions.launch  perceptions.launch.xml  platform.launch  platform.launch.xml  recording.launch  recording.launch.xml  rviz.launch  sensors.launch
ros/t_top/meshes/: d435.dae  rotating_base_mesh.dae  stewart_platform_mesh.dae
ros/t_top/rviz/: urdf.rviz
ros/t_top/scripts/: head_roll_image_rotation_node.py  opencr_raw_data_interpreter.py  robot_status.py  video_recorder.py
ros/t_top/t_top/: __init__.py  movement_commands.py
ros/t_top/urdf/: ttop.urdf.xacro
ros/tests/yolo_performance/: CMakeLists.txt  README.md  package.xml
ros/user_interface/: CMakeLists.txt  README.md  package-lock.json  package.json  package.xml
ros/user_interface/public/: index.html
ros/user_interface/scripts/: web.sh
ros/user_interface/src/: App.vue  Constants.js  Router.js  background.js  main.js
ros/utils/cloud_data/: CMakeLists.txt  README.md  package.xml
ros/utils/dnn_utils/: CMakeLists.txt  CMakeLists.txt.bck  README.md  package.xml  setup.py
system/daemon/: .clang-format  .gitignore  CMakeLists.txt  README.md
system/daemon/resources/: ttop_hardware_daemon.service.in
system/daemon/src/: DaemonApp.cpp  DaemonApp.h  DaemonSerialManager.cpp  DaemonSerialManager.h  DaemonSerialPortWrapper.cpp  DaemonSerialPortWrapper.h  DaemonWebSocketServer.cpp  DaemonWebSocketServer.h  JetsonModelParser.cpp  JetsonModelParser.h  ProcessUtils.cpp  ProcessUtils.h  WebSocketProtocolWrapper.cpp  WebSocketProtocolWrapper.h  main.cpp
system/system_tray/: CMakeLists.txt  README.md  SystemTrayApp.qrc
system/system_tray/resources/: ttop_system_tray.desktop
system/system_tray/src/: SystemTrayApp.cpp  SystemTrayApp.h  SystemTrayIcon.cpp  SystemTrayIcon.h  WebSocketDaemonClient.cpp  WebSocketDaemonClient.h  WebSocketSerialManager.cpp  WebSocketSerialManager.h  WebSocketSerialWrapper.cpp  WebSocketSerialWrapper.h  main.cpp
(+1549 files in other folders)
