<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>connect4</name>
  <version>0.0.0</version>
  <description>Connect4 game</description>
  <maintainer email="marc-antoine.maheux@usherbrooke.ca">Marc-Antoine Maheux</maintainer>
  <license>GPL-3.0 license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>daemon_ros_client</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>t_top_hbba_lite</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>perception_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>opentera_webrtc_ros_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
